# test_utility

./: README.md
SMC/: smc_bicycle_controller.m  smc_delay_main.m  smc_qp.m  smd_control_main.m
SMC/lateral_heading_error/: Clamp.m  ComputeBaselinkVelocities.m  ComputeRotationCenterVelocity.m  GetPose.m  draw_control_contour.m  lateral_heading_error_controller.m  lateral_heading_error_controller2.m  lateral_heading_error_controller_tip.m  load_parameters.m  main.m
SMC/lateral_heading_error_tip/: ComputeBaselinkVelocities.m  lateral_heading_error_controller.m  lateral_heading_error_controller_tip.m  load_parameters.m  main.m
block_cholesky_decomposition/: CMakeLists.txt  block_cholesky_decomposer.h  main.cc  timer.cpp  timer.h
block_cholesky_decomposition/examples/: example_csparse_with_eigen.cc  example_eigen_sparse_cholesky.cc
block_cholesky_decomposition/reserved/: csparse.cc  csparse.h
data_manager/: CMakeLists.txt  generic_key_value_data_manager.h  key_value_data_manager.h  main.cc  thread_safe_data_map.h
imu_preintegrator/: CMakeLists.txt  imu_preintegrator.cc  imu_preintegrator.h  main.cc
mahalanobis_distance_minimizer/: CMakeLists.txt  main.cc  main_cantor_pairing_function.cc  point_cloud_matcher.cc  point_cloud_matcher.h  time_checker.cc  time_checker.h  types.h
mahalanobis_distance_minimizer/optimizer/: loss_function.h
mahalanobis_distance_minimizer/optimizer/mahalanobis_distance_minimizer/: ceres_cost_functor.h  mahalanobis_distance_minimizer.h  mahalanobis_distance_minimizer_ceres.cc  mahalanobis_distance_minimizer_ceres.h
mahalanobis_distance_minimizer/tests/: simple_optimization_test.cc
message_queue_pattern/: CMakeLists.txt  backend_optimizer.h  frontend_supplier.h  main.cc  main_real_example.cc  message_handler.h  message_queue.h  multi_thread_executor.h  types.h
message_queue_pattern/examples/: main_realistic_situation.cc  main_simple.cc
observer_pattern/: CMakeLists.txt
parameter_manager/: CMakeLists.txt  bridge.h  footprint.h  footprint_base.h  parameter_base.h  parameter_manager.cc  parameter_manager.h  set_parameter_test.cc  types.h
parameter_manager/dummy_module/: bridge.h  dummy_module.cc  dummy_module.h  types.h
pose_class/: CMakeLists.txt  main.cc  se3.h  so3.h
pose_graph_optimization/: CMakeLists.txt
pose_graph_optimization/examples/: main_simple.cc
pose_graph_optimization/optimizer/: cout_utility.h  optimizer_options.h  options.h  pose_graph_optimizer.cc  pose_graph_optimizer.h  pose_graph_optimizer_ceres_solver.cc  pose_graph_optimizer_ceres_solver.h  pose_graph_optimizer_ceres_solver_test.cc  pose_graph_optimizer_cost_functor.h  solver_option_and_summary_refactor.cpp  solver_option_and_summary_refactor.h  summary_reporter.cc  summary_reporter.h  time_checker.cc  time_checker.h  types.h
pose_graph_optimization/utility/: geometry_helper.cc  geometry_helper.h  geometry_helper_test.cc  string_modifier.h  time_checker.cc  time_checker.h
producer_consumer_pattern/: CMakeLists.txt  consumer.h  main.cc
publisher_subscriber_pattern/: backend_optimizer.h  frontend_supplier.h  main.cc  publisher_subscriber.h  types.h
publisher_subscriber_pattern/legacy/: notification_service.h  publisher_ref.h
publisher_subscriber_pattern/legacy/example_pub_sub/: example_pub_sub.h
scan_matching/: CMakeLists.txt  image_processing.cpp  image_processing.h  scan_matcher.h  scan_matcher_analytic_solver.cc  scan_matcher_analytic_solver.h
scan_matching/example/: example_scan_matcher_analytic_solver.cc
thread_pool_pattern/: CMakeLists.txt  multi_thread_executor.h  test_enqueue_and_future.cc  worker_thread_pool.cc  worker_thread_pool.h
time_checker/: CMakeLists.txt  test_time_checker.cc
